Issue 4233 - Button bottom gap remove (#4236)
* Issue 4233 - Button bottom gap remove

* Reversed the logic

* Update maxiStyleCardsTab.js

* tests

* comments

* Update index.js

* Tests

* Update maxi-themes.scss

* Tests

* tests

* Fix `addTypographyStyle`

* tests

* Fix minor bugs
Skip corrupted SC tests

* Skip sc-variable tests

* Map title

* Update style.scss

* Update style.scss

* Update attributes.js

* Tests

* Remove skips

* e2e fix

* Better `showBottomGap` place

---------

--- a/src/css/maxi-themes.scss
+++ b/src/css/maxi-themes.scss
@@ -109,11 +109,18 @@ body.maxi-blocks--active {
 						word-spacing: var(
 							--maxi-#{$style}-#{$level}-word-spacing-general
 						);
-						margin-bottom: var(
-							--maxi-#{$style}-#{$level}-margin-bottom-general
-						);
 						text-indent: var(
 							--maxi-#{$style}-#{$level}-text-indent-general
+						);
+					}
+				}
+			}
+			&.maxi-text-block,
+			.maxi-text-block {
+				@each $level in $levels {
+					#{$level} {
+						margin-bottom: var(
+							--maxi-#{$style}-#{$level}-margin-bottom-general
 						);
 					}
 				}
@@ -480,9 +487,6 @@ body.maxi-blocks--active {
 						);
 						word-spacing: var(
 							--maxi-#{$style}-p-word-spacing-#{$responsive_size}
-						);
-						margin-bottom: var(
-							--maxi-#{$style}-p-margin-bottom-#{$responsive_size}
 						);
 						text-indent: var(
 							--maxi-#{$style}-p-text-indent-#{$responsive_size}
